--- a/second/www/gallery.html
+++ b/second/www/gallery.html
@@ -134,7 +134,7 @@
               <img src="images/samuel.jpg" alt="pic">
               <div class="info">
                 <h3>JOHN SAMUEL TEMITOPE</h3>
-                <p>Matric No:</p>
+                <p>Matric No: HO20230106482</p>
               </div>
             </a>
           </div>
