--- a/second/www/gallery.html
+++ b/second/www/gallery.html
@@ -134,7 +134,7 @@
               <img src="images/james.jpg" alt="pic">
               <div class="info">
                 <h3>BABALOLA SHERIF JAMES</h3>
-                <p>Matric No:</p>
+                <p>Matric No: HO20230106265</p>
               </div>
             </a>
           </div>
@@ -144,7 +144,7 @@
               <img src="images/kehinde.jpg" alt="pic">
               <div class="info">
                 <h3>OBISAKIN KEHINDE M</h3>
-                <p>Matric No: </p>
+                <p>Matric No: HO20230106305</p>
               </div>
             </a>
           </div>
